# aistatus

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
.sisyphus/fixtures/: sample-config.toml  sample-secrets.json
.sisyphus/fixtures/corrupted-session/: config.toml  secrets.json
.sisyphus/fixtures/sample-quotas/: config.toml  secrets.json
crates/app/: Cargo.toml
crates/app/src/: cli.rs  lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config/tests/fixtures/: sample-config.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/fixtures/: account-api-key.json  account-chatgpt-plus.json  account-raw-plan.json  quota-mixed-windows.json  quota-unknown-window.json
crates/provider-codex/: Cargo.toml
crates/provider-codex/src/: lib.rs
crates/provider-codex/tests/fixtures/: account-success-no-plan.json  account-success.json  rate-limits-auth-expired.json  rate-limits-schema-drift.json  rate-limits-success.json
crates/provider-openai-api/: Cargo.toml
crates/provider-openai-api/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/tui/tests/fixtures/: sample-quotas.json
docs/: 使用说明手册.md
src/: lib.rs  main.rs
