[package]
name = "aistatus"
version = "0.1.0"
edition.workspace = true

[features]
default = ["live"]
live = ["aistatus_app/live", "aistatus_core/live"]
fixture-only = []

[dependencies]
aistatus_app = { package = "aistatus-app", path = "crates/app", default-features = false }
aistatus_core = { package = "aistatus-core", path = "crates/core", default-features = false }
aistatus_auth = { package = "aistatus-auth", path = "crates/auth", default-features = false }
aistatus_tui = { package = "aistatus-tui", path = "crates/tui", default-features = false }

[workspace]
resolver = "2"
members = [
  "crates/app",
  "crates/auth",
  "crates/config",
  "crates/core",
  "crates/provider-codex",
  "crates/provider-openai-api",
  "crates/store",
  "crates/tui",
]

[workspace.package]
edition = "2024"
license = "MIT"
publish = false

[workspace.lints.rust]
warnings = "deny"

[profile.dev]
debug = true

[profile.release]
debug = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
keyring = { version = "3.6", default-features = false, features = ["apple-native", "linux-native-sync-persistent"] }
chacha20poly1305 = "0.10"
base64 = "0.22"
rand = "0.8"
thiserror = "1.0"
ratatui = "0.29"
crossterm = "0.28"
