[package]
name = "aistatus-auth"
version = "0.1.0"
edition.workspace = true

[lib]
name = "aistatus_auth"

[dependencies]
aistatus_core = { package = "aistatus-core", path = "../core", default-features = false }
aistatus_config = { package = "aistatus-config", path = "../config", default-features = false }
aistatus_store = { package = "aistatus-store", path = "../store", default-features = false }
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
