[package]
name = "aistatus-provider-codex"
version = "0.1.0"
edition.workspace = true

[lib]
name = "aistatus_provider_codex"

[dependencies]
aistatus_core = { package = "aistatus-core", path = "../core", default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
