[package]
name = "aistatus-store"
version = "0.1.0"
edition.workspace = true

[lib]
name = "aistatus_store"

[dependencies]
aistatus_core = { package = "aistatus-core", path = "../core", default-features = false }
aistatus_config = { package = "aistatus-config", path = "../config", default-features = false }
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
keyring.workspace = true
chacha20poly1305.workspace = true
base64.workspace = true
rand.workspace = true
thiserror.workspace = true
