[package]
name = "aistatus-tui"
version = "0.1.0"
edition.workspace = true

[lib]
name = "aistatus_tui"

[dependencies]
aistatus_core = { package = "aistatus-core", path = "../core", default-features = false }
aistatus_app = { package = "aistatus-app", path = "../app", default-features = false }
aistatus_config = { package = "aistatus-config", path = "../config", default-features = false }
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
